--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
+    <title>Личный блог</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
